--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -408,9 +408,9 @@ Connor Lennon
 <div class="r-stack">
 <p><img data-src="higuera-5-2023.jpg" class="fragment fade-in-then-out" height="250"></p>
 <p><img data-src="baylisboomhower.png" class="fragment fade-in-then-out" height="300"></p>
-<p><span class="fragment fade-in-then-out"><span class="hi-slate">Q:</span> What effect does <span class="hi-slate">information</span> have on <span class="hi-slate">prices</span></span></p>
-<p><span class="fragment fade-in-then-out"><span class="hi">Q:</span> what is the <span class="hi">distributional incidence</span> of the effect, and who responds to this information and how?</span></p>
-<p><span class="fragment fade-in"><span class="hi">Q:</span> What does this imply for forest/housing policy going forward?</span></p>
+<p><span class="hi-slate">Q:</span> What effect does <span class="hi-slate">information</span> have on <span class="hi-slate">prices</span></p>
+<p><span class="hi">Q:</span> what is the <span class="hi">distributional incidence</span> of the effect, and who responds to this information and how?</p>
+<p><span class="hi">Q:</span> What does this imply for forest/housing policy going forward?</p>
 </div>
 
 <aside><div>
@@ -576,11 +576,11 @@ Connor Lennon
 <table>
 <caption>Responsibility Areas and Fire Hazard Severity Zones where disclosure laws apply</caption>
 <colgroup>
-<col style="width: 53%">
-<col style="width: 9%">
-<col style="width: 12%">
-<col style="width: 9%">
-<col style="width: 16%">
+<col style="width: 46%">
+<col style="width: 8%">
+<col style="width: 22%">
+<col style="width: 8%">
+<col style="width: 14%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -617,14 +617,14 @@ Connor Lennon
 </table>
 </div>
 <div class="fragment fade-in">
-<table>
+<table style="width:100%;">
 <caption>Responsibility Areas and Fire Hazard Severity Zones where disclosure laws apply</caption>
 <colgroup>
-<col style="width: 53%">
-<col style="width: 9%">
-<col style="width: 12%">
-<col style="width: 9%">
-<col style="width: 16%">
+<col style="width: 39%">
+<col style="width: 15%">
+<col style="width: 15%">
+<col style="width: 15%">
+<col style="width: 15%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -663,7 +663,7 @@ Connor Lennon
 </div>
 </div>
 <aside><div>
-<p><span class="fragment">fixed <span class="hi-slate">risk</span>, variable <span class="hi">risk information</span></span></p>
+<p><span class="fragment">fixed</span><span class="hi-slate">risk</span>, variable <span class="hi">risk information</span></p>
 </div></aside></section>
 <section id="model-naive-hedonic" class="slide level2">
 <h2>Model: Naive Hedonic</h2>
@@ -1063,9 +1063,117 @@ X'_{2j,t}\alpha_{x_2}^i = \alpha_{0,1,X_2} +  \displaystyle\displaystyle\sum\lim
 <h2>Results: Preferences for Wildfire Variables</h2>
 <div class="columns">
 <div class="column" style="width:40%;">
-<p>1</p>
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th>Base</th>
+<th>Q2</th>
+<th>Q3</th>
+<th>Q4</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>regulated</td>
+<td>1003.15</td>
+<td>63.90</td>
+<td>170.92</td>
+<td>323.07</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>log(WHP)</td>
+<td>1.85</td>
+<td>-25.56</td>
+<td>-39.42</td>
+<td>-67.43</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>regulated * log(WHP)</td>
+<td>-157.03</td>
+<td>6.60</td>
+<td>-9.10</td>
+<td>-27.85</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 </div><div class="column" style="width:40%;">
-<p>2</p>
+<table>
+<thead>
+<tr class="header">
+<th></th>
+<th>Q1</th>
+<th>Q2</th>
+<th>Q3</th>
+<th>Q4</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>regulated</td>
+<td>45.08</td>
+<td>195.62</td>
+<td>334.58</td>
+<td>456.19</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>log(WHP)</td>
+<td>-2.37</td>
+<td>-4.92</td>
+<td>-2.86</td>
+<td>-36.08</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td>regulated * log(WHP)</td>
+<td>5.64</td>
+<td>-18.31</td>
+<td>-46.33</td>
+<td>-46.20</td>
+</tr>
+<tr class="even">
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 </section>
