fix conflict text

--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -1453,6 +1453,7 @@ P(Move = 1|FMC)*P(Choice|Move = 1,FMC)\]</span></p>
 <p><img data-src="quarto-pres_files/figure-revealjs/unnamed-chunk-4-1.png" width="9000"></p>
 </div>
 </div>
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
 </div>
 </section>
 <section id="data-eda-1" class="slide level2">
