--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -390,7 +390,7 @@ Connor Lennon
 <li><p>Two deeply-intertwined papers today</p>
 <ul>
 <li><p>Risk Disclosure and Home Prices: Evidence from California Wildfire Hazard Zones</p></li>
-<li><p>Untitled Work on Experience and Disclosure: Sorting over Wildfire Risk In the <span class="hi">W</span>ildland <span class="hi">U</span>rban <span class="hi">I</span>nterface (<span class="hi">WUI</span>)</p></li>
+<li><p>Sorting Over Wildfire Hazard: Sorting over Wildfire Risk In the <span class="hi">W</span>ildland <span class="hi">U</span>rban <span class="hi">I</span>nterface (<span class="hi">WUI</span>)</p></li>
 </ul></li>
 <li><p>These papers; together, are trying to tease out how homeowners respond to wildfire risk and experience.</p></li>
 </ul>
