--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -528,17 +528,21 @@ Connor Lennon
 </ul>
 </div><div class="column" style="width:55%;">
 <div class="r-stack">
+<div class="fragment fade-out">
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="map_fhsz.png"></p>
 <figcaption>Map of FHSZ in california</figcaption>
 </figure>
 </div>
+</div>
+<div class="fragment fade-in">
 <div class="quarto-figure quarto-figure-center">
 <figure>
 <p><img data-src="sd_county.png"></p>
 <figcaption>Map of FHSZ in california</figcaption>
 </figure>
+</div>
 </div>
 </div>
 </div>
