--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -1557,7 +1557,7 @@ P(Move = 1|FMC)*P(Choice|Move = 1,FMC)\]</span></p>
 <td>(23.07)</td>
 </tr>
 <tr class="odd">
-<td>log(WHP)</td>
+<td>ln(WHP)</td>
 <td>-2.37</td>
 <td>-4.92</td>
 <td>-2.86</td>
