--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -1401,6 +1401,12 @@ X'_{2j,t}\alpha_{x_2}^i = \alpha_{0,1,X_2} +  \displaystyle\displaystyle\sum\lim
 <p>Organize parameters by choice (time-location) and individual heterogeneity</p>
 <p><span class="math display">\[V_{j,t}^i = \overbrace{\underbrace{X'_{1jt}\alpha_{x_1} + X'_{2jt}\alpha_{0,x_2}  - \alpha_CC_{jt} + \xi_{jt}}_\text{choice-specific component}}^{\color{red}{\delta_{jt}}}\\ + \underbrace{\displaystyle\displaystyle\sum\limits_{\gamma_z}^{z}\sum\limits_{k=1}^{4}1[\gamma_z^i = \gamma_z] \cdot \alpha_{\gamma_z,k,X_2}Q_k^i + \beta_{FMC}1[d_t^i \not = d_{t-1}^i]\cdot FMC(d_{t-1}^i) + \epsilon_{j,t}^i}_\text{individual-heterogeneity component}\]</span></p>
 </section>
+<section id="model-probability" class="slide level2">
+<h2>Model: Probability</h2>
+<p>Households choose location to maximize flow utility in given period, ie, choose</p>
+<p><span class="math display">\[V_{jt}^i \geq V^i_{j't}\ \forall\ j' \neq j\]</span> We assume the unobserved individual preferences are iid, and follow gumbel (min or max) distribution</p>
+<p><span class="math display">\[Pr^i_{jt} = (\frac{e^{V^i_{j,t}}}{\sum_{j'}^Je^{V^i_{j,t}}})\]</span> We observe <span class="math inline">\(N_t \in N\)</span> individuals moving in market/time-period t, average over individual probabilities to recover the share predictions for each choice j in market t.</p>
+</section>
 <section id="estimation" class="slide level2">
 <h2>Estimation</h2>
 <p>Use two-stage Berry-Levinsohn-Pakes procedure to recover conditional heterogeneity and mean preferences</p>
