--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -1403,7 +1403,7 @@ X'_{2j,t}\alpha_{x_2}^i = \alpha_{0,1,X_2} +  \displaystyle\displaystyle\sum\lim
 </section>
 <section id="model-probability" class="slide level2">
 <h2>Model: Probability</h2>
-<p>Households in market t choose location to maximize flow utility, ie, choose</p>
+<p>Households in market t choose location to maximize flow util, ie, choose</p>
 <p><span class="math display">\[V_{jt}^i \geq V^i_{j't}\ \forall\ j' \neq j\]</span> We assume the unobserved individual preferences are iid, and follow gumbel (min or max) distribution</p>
 <p><span class="math display">\[Pr^i_{jt} = (\frac{e^{V^i_{j,t}}}{\sum_{j'}^Je^{V^i_{j,t}}})\]</span> We observe <span class="math inline">\(N_t \in N\)</span> individuals moving in market/time-period t, average over individual probabilities to recover the share predictions for each choice j in market t.</p>
 </section>
