--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -1376,7 +1376,7 @@ X'_{2j,t}\alpha_{x_2}^i = \alpha_{0,1,X_2} +  \displaystyle\displaystyle\sum\lim
 <p>Household <span class="math inline">\(i\)</span>’s indirect utility of choosing a location j at time t is given by</p>
 <div class="small-font">
 <p><span class="math display">\[
-V_{j,t}^i = X'_{1j,t}\alpha_{X_1} - \alpha_{C}C_{J,t} + \xi_{j,t} + X'_{2j,t}\alpha^i_{X_2} + \beta_{FMC}1[d_t^i \not = d_{t-1}^i]\cdot FMC(d_{t-1}^i) + \epsilon_{j,t}^i
+V_{j,t}^i = X'_{1j,t}\alpha_{X_1} - \alpha_{C}C_{j,t} + \xi_{j,t} + X'_{2j,t}\alpha^i_{X_2} + \beta_{FMC}1[d_t^i \not = d_{t-1}^i]\cdot FMC(d_{t-1}^i) + \epsilon_{j,t}^i
 \]</span></p>
 </div>
 <p>We also model…</p>
