--- a/quarto-pres.html
+++ b/quarto-pres.html
@@ -1353,7 +1353,7 @@ X'_{2j,t}\alpha_{x_2}^i = \alpha_{0,1,X_2} +  \displaystyle\displaystyle\sum\lim
 <div class="fragment fade-out">
 <ul>
 <li><span class="math inline">\(X_{1j,t} =\)</span> House/neighborhood attributes</li>
-<li><span class="math inline">\(P_{jt} =\)</span> Flow cost of living in location j, based on transaction price</li>
+<li><span class="math inline">\(C_{jt} =\)</span> Flow cost of living in location j, based on transaction price</li>
 <li><span class="math inline">\(X_{2jt} =\)</span> Attributes for which HH have heterogenous preferences</li>
 <li><span class="math inline">\(\xi_{jt} =\)</span> Choice-specific unobserved factors</li>
 <li><span class="math inline">\(FMC(d_0^i) =\)</span> 6% sale price/value for property buyer is moving <span class="hi">from</span></li>
